--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Draco by @afnizarnur</title>
+    <title>@iyazdanicharati</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Draco is free PSD &amp; HTML template by @afnizarnur">
@@ -26,7 +26,7 @@
 		<div class="container">
 			<header class="group top-nav">
 				<div class="navigation-toggle" data-tools="navigation-toggle" data-target="#navbar-1">
-				    <span class="logo">DRACO</span>
+				    <span class="logo">Iman Yazdani Charati</span>
 				</div>
 			    <nav id="navbar-1" class="navbar item-nav">
 				    <ul>
@@ -43,7 +43,7 @@
 	<!-- Introduction -->
 	<div class="intro section" id="about">
 		<div class="container">
-			<p>Hi, I’m Draco the Dragon</p>
+			<p>Hi, I’m Iman Yazdani Charati</p>
 			<div class="units-row units-split wrap">
 				<div class="unit-20">
 					<img src="img/ava.jpg" alt="Avatar">
@@ -119,13 +119,6 @@
 				<li>Framework</li>
 				<li>Laravel / CodeIgniter / Zend / Ruby On Rails</li>
 			</ul>
-		</div>
-	</div>
-
-	<!-- Quote -->
-	<div class="quote">
-		<div class="container text-centered">
-			<h1>fight against the ugliness.</h1>
 		</div>
 	</div>
 
