--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 					<img src="img/ava.jpg" alt="Avatar">
 				</div>
 				<div class="unit-80">
-					<h1>I live in<br><span id="typed"></span></h1>
+					<h1>Experiences<br><span id="typed"></span></h1>
 				</div>
 				<p>
-					Draco is a constellation in the far northern sky. Its name is Latin for dragon. Draco is circumpolar (that is, never setting) for many observers in the northern hemisphere. It was one of the 48 constellations listed by the 2nd century astronomer Ptolemy.
+					I can't feel my mind storage will be full , i learned web design and fullstack development and manage projects and beside of these i was active in some fields like photography (Start with canon1300d) and photo editing and graphic designs and until 2020 that i joined to some social activity about social marketing and social tactics. now i'm in 1kf groups and admin of iclassic of iran in web fields and iyc media that my small media bussiness...
 				</p>
 			</div>
 		</div>
@@ -83,22 +83,22 @@
 	<!-- Award & Achievements -->
 	<div class="award section second" id="achievements">
 		<div class="container">
-			<h1>Award &amp;<br>Achievements</h1>
+			<h1>JOBs</h1>
 			<ul class="award-list list-flat">
-				<li>January 2014</li>
-				<li>Attained PHP5 certification</li>
-				<li>Hold world/Olympic record</li>
+				<li>Sepehr Afrooz Saba</li>
+				<li><strong>FullStack Developer</strong></li>
 			</ul>
 			<ul class="award-list list-flat">
-				<li>December 2014</li>
-				<li>Audited X number of clients in only Y amount of time</li>
-				<li>Held a perfect attendance record</li>
-				<li>Were promoted after only X months in the role</li>
+				<li>Mazinoor co.</li>
+				<li><strong>FullStack Developer</strong></li>
 			</ul>
 			<ul class="award-list list-flat">
-				<li>March 2014</li>
-				<li>Placed employees at X companies</li>
-				<li>United multiple teams post-merger</li>
+				<li>TechnoTabligh</li>
+				<li><strong>FullStack Developer & IT Manager</strong></li>
+			</ul>
+			<ul class="award-list list-flat">
+				<li>IClassic Softwares</li>
+				<li><strong>FullStack Developer & IT Manager</strong></li>
 			</ul>
 		</div>
 	</div>
@@ -112,12 +112,24 @@
 				<li>HTML / CSS / SASS / PHP / Javascript</li>
 			</ul>
 			<ul class="skill-list list-flat">
+				<li>JS Framework</li>
+				<li>ReactJs / VueJs</li>
+			</ul>
+			<ul class="skill-list list-flat">
+				<li>CSS Framework</li>
+				<li>TailwindCss / Bootstrap / Material Design / Materialize / Semantic</li>
+			</ul>
+			<ul class="skill-list list-flat">
 				<li>Database</li>
-				<li>MySQL / MongoDB / Oracle / Access</li>
+				<li>MySQL / Sqlite</li>
 			</ul>
 			<ul class="skill-list list-flat">
 				<li>Framework</li>
-				<li>Laravel / CodeIgniter / Zend / Ruby On Rails</li>
+				<li>Laravel / Lumen / ICPrime</li>
+			</ul>
+			<ul class="skill-list list-flat">
+				<li>Android</li>
+				<li>Android Studio / ReactNative</li>
 			</ul>
 		</div>
 	</div>
@@ -126,14 +138,15 @@
 		<div class="container">
 			<div class="units-row">
 			    <div class="unit-50">
-			    	<p>Handcrafted by Afnizar Nur Ghifari</p>
+			    	<p>IYC allright reserved</p>
+			    	<p>Special Thank to Afnizar Nur Ghifari</p>
 			    </div>
 			    <div class="unit-50">
 					<ul class="social list-flat right">
-						<li><a href="mailto:afnizarhilmi@gmail.com"><i class="fa fa-send"></i></a></li>
-						<li><a href="http://twitter.com/afnizarnur"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="http://dribbble.com/afnizarnur"><i class="fa fa-dribbble"></i></a></li>
-						<li><a href="http://behance.com/afnizarnur"><i class="fa fa-behance"></i></a></li>
+						<li><a href="mailto:iyazdanicharati@gmail.com"><i class="fa fa-send"></i></a></li>
+						<li><a href="http://twitter.com/iyazdanicharati"><i class="fa fa-twitter"></i></a></li>
+						<li><a href="http://instagram.com/iyazdanicharati"><i class="fa fa-instagram"></i></a></li>
+						<li><a href="https://www.linkedin.com/in/iyazdanicharati/"><i class="fa fa-linkedin"></i></a></li>
 					</ul>
 			    </div>
 			</div>
@@ -148,7 +161,7 @@
     <script>
 		function newTyped(){}$(function(){$("#typed").typed({
 		// Change to edit type effect
-		strings: ["far northern sky", "your galaxy", "everywhere"],
+		strings: ["Php developer", "React, ReactNative, VueJs", "TailwindCss, Material Design, Bootstrap", "Android Studio", "AfterEffect, Photoshop"],
 
 		typeSpeed:90,backDelay:700,contentType:"html",loop:!0,resetCallback:function(){newTyped()}}),$(".reset").click(function(){$("#typed").typed("reset")})});
     </script>
