--- a/index.html
+++ b/index.html
@@ -138,8 +138,7 @@
 		<div class="container">
 			<div class="units-row">
 			    <div class="unit-50">
-			    	<p>IYC allright reserved</p>
-			    	<p>Special Thank to Afnizar Nur Ghifari</p>
+			    	<p>IYC allright reserved<br />Special Thank to Afnizar Nur Ghifari</p>
 			    </div>
 			    <div class="unit-50">
 					<ul class="social list-flat right">
