--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 	<style>
 		.intro h1:before {
-			/* Edit this with your name or anything else */
 			content: 'IYC';
 		}
 	</style>
@@ -31,15 +30,13 @@
 			    <nav id="navbar-1" class="navbar item-nav">
 				    <ul>
 				        <li class="active"><a href="#about">About</a></li>
-				        <li><a href="#experiences">Experiences</a></li>
-				        <li><a href="#achievements">Achievements</a></li>
+				        <li><a href="#jobs">Jobs</a></li>
 				        <li><a href="#skills">Skills</a></li>
 				    </ul>
 				</nav>
 			</header>
 		</div>
 	</div>
-
 	<!-- Introduction -->
 	<div class="intro section" id="about">
 		<div class="container">
@@ -57,9 +54,8 @@
 			</div>
 		</div>
 	</div>
-
 	<!-- Work Experience -->
-	<div class="work section second" id="experiences">
+	<!-- <div class="work section second" id="experiences">
 		<div class="container">
 			<h1>Work<br>Experiences</h1>
 			<ul class="work-list">
@@ -78,10 +74,9 @@
 				<li>System Designer</li>
 			</ul>
 		</div>
-	</div>
-
+	</div> -->
 	<!-- Award & Achievements -->
-	<div class="award section second" id="achievements">
+	<div class="award section second" id="jobs">
 		<div class="container">
 			<h1>JOBs</h1>
 			<ul class="award-list list-flat">
@@ -102,7 +97,6 @@
 			</ul>
 		</div>
 	</div>
-
 	<!-- Technical Skills -->
 	<div class="skills section second" id="skills">
 		<div class="container">
@@ -133,7 +127,6 @@
 			</ul>
 		</div>
 	</div>
-
 	<footer>
 		<div class="container">
 			<div class="units-row">
@@ -151,7 +144,6 @@
 			</div>
 		</div>
 	</footer>
-
 	<!-- Javascript -->
 	<script src="js/jquery.min.js"></script>
 	<script src="js/typed.min.js"></script>
@@ -161,7 +153,6 @@
 		function newTyped(){}$(function(){$("#typed").typed({
 		// Change to edit type effect
 		strings: ["Php developer", "React, ReactNative, VueJs", "TailwindCss, Material Design, Bootstrap", "Android Studio", "AfterEffect, Photoshop"],
-
 		typeSpeed:90,backDelay:700,contentType:"html",loop:!0,resetCallback:function(){newTyped()}}),$(".reset").click(function(){$("#typed").typed("reset")})});
     </script>
 </body>
